@@ -4,6 +4,7 @@
  * Realm no longer incorrectly warns that an instance has been closed too many times.
  * Realm now shows a log warning if an instance is being finalized without being closed.
  * Fixed bug causing Realms to be cached during a RealmMigration resulting in invalid realms being returned from Realm.getInstance().
+ * Added Realm.distinct() to get distinct set of objects. Only boolean, short, int, long, Date, and String fields are supported.
 
 0.77
  * Added Realm.allObjectsSorted() and RealmQuery.findAllSorted() and exteding RealmResults.sort() for multi-field sorting.
